--- a/public/login.html
+++ b/public/login.html
@@ -2,26 +2,32 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Tank Game - Login</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-    <form class="form-horizontal" action="/login">
+    <form id="form" class="form-horizontal" action="/login" method="POST">
         <div class="form-group row">
             <label for="inpName" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="inpName" placeholder="Name">
             </div>
         </div>
+
+        <input id="inpTeam" type="hidden"/>
+
         <div class="form-group row">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Team 1</button>
+                <button type="submit" class="btn btn-default btn-submit" data-team="1">Team 1</button>
             </div>
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Team 2</button>
+                <button type="submit" class="btn btn-default btn-submit" data-team="2">Team 2</button>
             </div>
         </div>
     </form>
+
+    <script src="javascripts/jquery-3.1.0.min.js"></script>
+    <script src="javascripts/login.js"></script>
 </body>
 </html>
